--- a/src/components/TariffCard/tariffCard.css
+++ b/src/components/TariffCard/tariffCard.css
@@ -3,12 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 5px;
+  border: 1px solid #ccc;
 }
 
 .active {
-  border: 2px solid #7fcc9d;
-  background-color: #cdffce;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .active:hover {
@@ -31,6 +30,7 @@
   font-weight: bold;
   font-size: 1.4em;
   align-items: center;
+  margin: 10px;
 }
 
 .card__item-speed {
